force-app/main/default/objects/Merge_Requests__c/Merge_Requests__c.object-meta.xml
<CustomObject>
    <label>Merge Request</label>
    <nameField>
        <label>Merge Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>