force-app/main/default/objects/Merge_Requests__c/fields/Correct_Account__c.field-meta.xml
<CustomField>
    <fullName>Correct_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correct Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merge Requests</relationshipLabel>
    <relationshipName>Merge_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>