force-app/main/default/objects/Merge_Requests__c/fields/Merge_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Merge_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merge Requests (Merge Account 1)</relationshipLabel>
    <relationshipName>Merge_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>