force-app/main/default/objects/Merge_Requests__c/fields/Merge_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Merge_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merge Requests (Merge Account 2)</relationshipLabel>
    <relationshipName>Merge_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>