force-app/main/default/objects/Merge_Requests__c/fields/mergeAcct1_Id__c.field-meta.xml
<CustomField>
    <fullName>mergeAcct1_Id__c</fullName>
    <label>mergeAcct1 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>