force-app/main/default/objects/Merge_Requests__c/fields/mergeAcct2_Id__c.field-meta.xml
<CustomField>
    <fullName>mergeAcct2_Id__c</fullName>
    <label>mergeAcct2 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>