force-app/main/default/objects/Merge_Requests__c/fields/MergeComplete__c.field-meta.xml
<CustomField>
    <fullName>MergeComplete__c</fullName>
    <formula>(Correct_Account__c == Merge_Account_1__c   &amp;&amp; isblank(Merge_Account_2__c))  
||
(Correct_Account__c == Merge_Account_1__c   &amp;&amp; Correct_Account__c == Merge_Account_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MergeComplete</label>
    <type>Checkbox</type>
</CustomField>