force-app/main/default/objects/Merge_Requests__c/listViews/Open_Merges.listView-meta.xml
<ListView>
    <fullName>Open_Merges</fullName>
    <columns>MergeComplete__c</columns>
    <columns>NAME</columns>
    <columns>Correct_Account__c</columns>
    <columns>Merge_Account_1__c</columns>
    <columns>Merge_Account_2__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Open Merges</label>
</ListView>